--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--This website template was created by : Student Tirivashe Ushamba-->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<h1>   FitnessPro  </h1>
+<h1>   FitnessProx  </h1>
 </head>
 
 <link href="styles.css" rel="stylesheet">
